[package]
name = "fast-async-pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.11.2"
crossbeam-deque = "0.8.1"
bumpalo = "3.8.0"
rand = "0.8.4"
isnt = "0.1.0"
num_cpus = "1.13.0"
futures = "0.3.18"
rayon = "1.5.1"
tokio = { version = "1.14.0", features = ["rt-multi-thread"] }

[profile.release]
debug = true
